k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parto-frontend
  namespace: parto
  labels:
    app: parto-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: parto-frontend
  template:
    metadata:
      labels:
        app: parto-frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/khalilksa33/parto-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: parto-frontend
  namespace: parto
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 32080
  selector:
    app: parto-frontend
